fix: quote colons in YAML frontmatter titles to prevent build errors

--- a/website/docs/01-Module-1-Robotic-Nervous-System/01-Week-1/01-intro.mdx
+++ b/website/docs/01-Module-1-Robotic-Nervous-System/01-Week-1/01-intro.mdx
@@ -1,20 +1,20 @@
 ---
 sidebar_position: 1
-title: Introduction
+title: 1. Introduction & Concepts
 description: Overview of The Robotic Nervous System
 ---
 
-# Week 1: Introduction to ROS 2
+# Introduction to ROS 2
 
 ## 🎯 Learning Objectives
 
 <LearningObjective objectives={[
   "Understand ROS 2 Architecture (Nodes, Topics, Services)",
-  "Install ROS 2 Humble on your machine",
-  "Run your first node"
+  "Differentiate between ROS 1 and ROS 2",
+  "Learn the filesystem hierarchy"
 ]} />
 
-## 1. The Robotic Nervous System
+## The Robotic Nervous System
 
 Just as a biological nervous system transmits signals between the brain and muscles, **ROS 2 (Robot Operating System)** acts as the middleware for robots. It allows different hardware components (Lidar, Motors, Cameras) to communicate with software algorithms (SLAM, Planning, Vision).
 
@@ -24,43 +24,3 @@ Just as a biological nervous system transmits signals between the brain and musc
 *   **Topics**: Streaming data pipes (Pub/Sub).
 *   **Services**: Request/Reply synchronous communication.
 *   **Actions**: Long-running goals with feedback.
-
-### 2. Hands-On: Installation
-
-We use **ROS 2 Humble Hawksbill**.
-
-<TerminalBlock commands={{
-  linux: "sudo apt install ros-humble-desktop",
-  windows: "choco install ros-humble-desktop",
-  mac: "brew install ros-humble-desktop"
-}} />
-
-### 3. Lab: Running Turtlesim
-
-Turtlesim is the "Hello World" of ROS.
-
-```bash
-# Terminal 1: Start the simulation
-ros2 run turtlesim turtlesim_node
-
-# Terminal 2: Start the keyboard controller
-ros2 run turtlesim turtle_teleop_key
-```
-
-### 4. Code Example: Minimal Python Node
-
-```python
-import rclpy
-from rclpy.node import Node
-
-class MyNode(Node):
-    def __init__(self):
-        super().__init__('my_node')
-        self.get_logger().info('Hello ROS 2!')
-
-def main():
-    rclpy.init()
-    node = MyNode()
-    rclpy.spin(node)
-    rclpy.shutdown()
-```
