--- a/website/docs/01-Module-1-Robotic-Nervous-System/03-Week-3/01-intro.mdx
+++ b/website/docs/01-Module-1-Robotic-Nervous-System/03-Week-3/01-intro.mdx
@@ -1,46 +1,20 @@
 ---
 sidebar_position: 1
-title: Introduction
-description: Actions, Parameters, and Launch Files
+title: 1. Actions & Parameters
+description: Advanced ROS 2 Concepts
 ---
 
-# Week 3: Advanced ROS 2
+# Actions & Parameters
 
-## 🎯 Learning Objectives
+## Actions
 
-<LearningObjective objectives={[
-  "Execute long-running tasks with Actions",
-  "Configure nodes dynamically with Parameters",
-  "Manage multi-node systems with Launch files"
-]} />
+Actions are goal-oriented tasks.
+*   **Example**: "Navigate to Waypoint A"
+*   **Feedback**: "Distance remaining: 5m... 4m..."
+*   **Result**: "Arrived at A".
 
-## 1. Actions: Goals with Feedback
+## Parameters
 
-Unlike Services, **Actions** are preemptable and provide feedback.
-*   **Example**: "Go to the kitchen."
-    *   *Feedback*: "Moving... 10%... 50%..."
-    *   *Cancel*: "Stop! I changed my mind."
-
-## 2. Parameters
-
-Parameters allow you to configure nodes at runtime without recompiling.
+Configuration values stored on the node.
 *   `max_speed`: 2.0 m/s
-*   `camera_resolution`: 1080p
-
-## 3. Launch Files (Python)
-
-Starting 10 nodes manually is tedious. Launch files script this.
-
-```python
-from launch import LaunchDescription
-from launch_ros.actions import Node
-
-def generate_launch_description():
-    return LaunchDescription([
-        Node(
-            package='turtlesim',
-            executable='turtlesim_node',
-            name='sim'
-        ),
-    ])
-```
+*   `camera_iso`: 800
