--- a/website/docs/02-Module-2-Digital-Twin/01-Week-4/01-intro.mdx
+++ b/website/docs/02-Module-2-Digital-Twin/01-Week-4/01-intro.mdx
@@ -1,39 +1,22 @@
 ---
 sidebar_position: 1
-title: Introduction
-description: Overview of The Digital Twin
+title: 1. Simulation Theory
+description: Why we simulate
 ---
 
-# Week 4: The Digital Twin
+# Simulation Theory
 
-## 🎯 Learning Objectives
-
-<LearningObjective objectives={[
-  "Understand the role of simulation in robotics",
-  "Install Gazebo and Unity",
-  "Import a URDF model"
-]} />
-
-## 1. Why Simulate?
+## Why Simulate?
 
 Building robots is expensive and slow. Simulators allow us to:
 1.  **Iterate Fast**: Crash a virtual robot 1000 times for free.
 2.  **Train AI**: Generate synthetic data for ML models.
 3.  **Verify**: Test code before deploying to hardware.
 
-## 2. Simulator Landscape
+## The Simulator Landscape
 
 | Simulator | Best For | Engine |
 |-----------|----------|--------|
-| **Gazebo Classic** | Legacy ROS projects | OGRE |
-| **Gazebo (Ignition)** | Modern ROS 2 sim | OGRE2/Qt |
-| **NVIDIA Isaac Sim** | Photorealism & AI | Omniverse (RTX) |
-| **Unity** | VR/AR & Custom logic | Unity Engine |
-
-## 3. Lab: Installing Gazebo
-
-<TerminalBlock commands={{
-  linux: "sudo apt install ros-humble-gazebo-ros-pkgs",
-  windows: "wsl install ros-humble-gazebo-ros-pkgs",
-  mac: "brew install gazebo"
-}} />
+| **Gazebo** | Physics & Sensors | OGRE/Physics |
+| **Unity** | Rendering & VR | Game Engine |
+| **Isaac Sim** | AI Training | Omniverse |
