--- a/website/docs/02-Module-2-Digital-Twin/04-Week-7/01-intro.mdx
+++ b/website/docs/02-Module-2-Digital-Twin/04-Week-7/01-intro.mdx
@@ -1,31 +1,15 @@
 ---
 sidebar_position: 1
-title: Introduction
-description: High Fidelity Rendering
+title: 1. Unity Robotics
+description: Using Game Engines for Robotics
 ---
 
-# Week 7: Unity & Bridges
+# Unity Robotics
 
-## 🎯 Learning Objectives
-
-<LearningObjective objectives={[
-  "Set up Unity Robotics Hub",
-  "Bridge ROS 2 with Unity via TCP",
-  "Create photorealistic environments"
-]} />
-
-## 1. Why Unity?
-
+## Why Unity?
 Gazebo is great for physics, but Unity offers **Game-Engine quality graphics**. This is crucial for Computer Vision tasks where lighting and texture matter.
 
-## 2. ROS-TCP-Connector
-
-Unity communicates with ROS 2 using a TCP endpoint.
-*   **Unity**: Sender/Receiver scripts (C#).
-*   **ROS 2**: `ros_tcp_endpoint` node.
-
-## 3. Lab: Visualizing Pick & Place
-
-1.  Import a robotic arm (UR3e) into Unity.
-2.  Setup the ROS subscriber for joint angles.
-3.  Publish joint angles from a ROS 2 terminal and watch the Unity arm move.
+## ROS-TCP-Endpoint
+Unity communicates with ROS 2 via TCP.
+- **Unity**: Acts as the TCP Client.
+- **ROS 2**: Acts as the TCP Server.
