--- a/website/docs/03-Module-3-AI-Robot-Brain/01-Week-8/01-intro.mdx
+++ b/website/docs/03-Module-3-AI-Robot-Brain/01-Week-8/01-intro.mdx
@@ -1,31 +1,20 @@
 ---
 sidebar_position: 1
-title: Introduction
-description: Overview of The AI-Robot Brain
+title: 1. Intro to Isaac Sim
+description: NVIDIA's Omniverse Simulator
 ---
 
-# Week 8: The AI-Robot Brain
+# Intro to Isaac Sim
 
-## 🎯 Learning Objectives
-
-<LearningObjective objectives={[
-  "Understand NVIDIA Isaac Sim",
-  "Implement VSLAM",
-  "Configure Nav2 stack"
-]} />
-
-## 1. Introduction to Isaac Sim
-
+## What is Isaac Sim?
 Isaac Sim is built on **NVIDIA Omniverse**. It leverages RTX ray-tracing for physically accurate sensor simulation.
+
+## Key Features
 *   **Synthetic Data Generation (SDG)**: Train models on 1M+ generated images.
 *   **Isaac Gym**: Reinforcement Learning on GPU.
+*   **ROS 2 Bridge**: Seamless integration.
 
-## 2. Requirements
-
-<div className="alert alert--warning">
-  <strong>Warning:</strong> Isaac Sim requires an NVIDIA RTX GPU (2070 or higher). If you are on a Mac or non-RTX laptop, use the Cloud instance provided by the course.
+## Hardware Check
+<div className="alert alert--danger">
+  <strong>Requirement:</strong> NVIDIA RTX 2070 or higher.
 </div>
-
-## 3. Lab: Hello Isaac
-
-Launching the environment and connecting the ROS 2 Bridge.
