--- a/website/docs/03-Module-3-AI-Robot-Brain/02-Week-9/01-intro.mdx
+++ b/website/docs/03-Module-3-AI-Robot-Brain/02-Week-9/01-intro.mdx
@@ -1,31 +1,19 @@
 ---
 sidebar_position: 1
-title: Introduction
-description: Visual SLAM
+title: 1. VSLAM Concepts
+description: Visual Simultaneous Localization and Mapping
 ---
 
-# Week 9: Visual SLAM
+# Visual SLAM (vSLAM)
 
-## 🎯 Learning Objectives
+## The Problem
+1. To map the room, I need to know where I am.
+2. To know where I am, I need a map of the room.
 
-<LearningObjective objectives={[
-  "Understand Simultaneous Localization and Mapping",
-  "Deploy RTAB-Map with RGB-D cameras",
-  "Generate 2D and 3D occupancy grids"
-]} />
+## The Solution: SLAM
+Using probability to estimate both simultaneously.
 
-## 1. What is SLAM?
-
-**SLAM (Simultaneous Localization and Mapping)** is the chicken-and-egg problem:
-1.  To map the room, I need to know where I am.
-2.  To know where I am, I need a map of the room.
-
-## 2. Visual SLAM (vSLAM)
-
-Using cameras (RGB-D or Stereo) to extract feature points from the environment.
-*   **Loop Closure**: Recognizing a place we've been before to correct drift.
-*   **RTAB-Map**: Real-Time Appearance-Based Mapping.
-
-## 3. Lab: Mapping the Virtual Home
-
-Drive the robot around the Unity/Isaac house environment. Watch the 3D pointcloud map build up in RViz.
+## Visual SLAM
+Using cameras (RGB-D or Stereo) instead of Lasers.
+*   **Features**: Edges, corners, blobs.
+*   **Loop Closure**: "I have seen this chair before!" -> Corrects drift.
