--- a/website/docs/04-Module-4-VLA/13-Week-13-Capstone/01-intro.mdx
+++ b/website/docs/04-Module-4-VLA/13-Week-13-Capstone/01-intro.mdx
@@ -17,6 +17,8 @@ Integrate all learned modules to deploy a full stack application on a humanoid r
 3. **Action**: Pick up an object (Digital Twin sim first)
 4. **Execution**: Run on Edge Hardware (ROS 2)
 
+## Hardware Specs
+
 <HardwareComparison highlight="edge" profiles={[
     {
         id: "workstation",
